--- a/cf/post-register-lambda.yaml
+++ b/cf/post-register-lambda.yaml
@@ -69,28 +69,28 @@ Resources:
       KmsMasterKeyId: "alias/aws/sns"
       TopicName: !Sub "post-registration-user-access-${Environment}-default"
 
-  PostUserRegistrationSubscription:
-    Type: 'AWS::SNS::Subscription'
-    Properties:
-      TopicArn: !Ref PostRegisterTopic
-      Endpoint: !Sub [ "${BaseUrl}/v2/access/post-registration", BaseUrl: !If [
-                  isProd, !Sub ["https://api.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]],
-                  !Sub ["https://api-default.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
-                ]]
+  # PostUserRegistrationSubscription:
+  #   Type: 'AWS::SNS::Subscription'
+  #   Properties:
+  #     TopicArn: !Ref PostRegisterTopic
+  #     Endpoint: !Sub [ "${BaseUrl}/v2/access/post-registration", BaseUrl: !If [
+  #                 isProd, !Sub ["https://api.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]],
+  #                 !Sub ["https://api-default.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
+  #               ]]
 
-      Protocol: "https"
-      DeliveryPolicy:
-        healthyRetryPolicy:
-          minDelayTarget: 10
-          maxDelayTarget: 60
-          numRetries: 56
-          numNoDelayRetries: 0
-          numMinDelayRetries: 2
-          numMaxDelayRetries: 16
-          backoffFunction: exponential
-      FilterPolicy:
-        type:
-          - PostUserRegistration
+  #     Protocol: "https"
+  #     DeliveryPolicy:
+  #       healthyRetryPolicy:
+  #         minDelayTarget: 10
+  #         maxDelayTarget: 60
+  #         numRetries: 56
+  #         numNoDelayRetries: 0
+  #         numMinDelayRetries: 2
+  #         numMaxDelayRetries: 16
+  #         backoffFunction: exponential
+  #     FilterPolicy:
+  #       type:
+  #         - PostUserRegistration
 
   PostRegisterLambda:
     Type: AWS::Lambda::Function
