--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -374,14 +374,14 @@ jobs:
         name: Compile environment-specific domain name
         run: |-
           if [ "${{ matrix.environment-type }}" = "production" ]; then
-            PRIMARY_DOMAIN_NAME="${{ secrets.PRIMARY_DOMAIN_NAME }}"
+          ROUTE_53_HOSTED_ZONE_ID="${{ secrets.ROUTE_53_HOSTED_ZONE_ID }}"
             DOMAIN_NAME="${{ secrets.DOMAIN_NAME }}"
           fi
           if [ "${{ matrix.environment-type }}" = "staging" ]; then
-            PRIMARY_DOMAIN_NAME="${{ secrets.PRIMARY_DOMAIN_NAME }}"
+            ROUTE_53_HOSTED_ZONE_ID="${{ secrets.ROUTE_53_HOSTED_ZONE_ID }}"
             DOMAIN_NAME="${{ secrets.DOMAIN_NAME_STAGING }}"
           fi
-          echo "primary-domain-name=$PRIMARY_DOMAIN_NAME" >> $GITHUB_OUTPUT
+          echo "hosted-zone-id=$ROUTE_53_HOSTED_ZONE_ID" >> $GITHUB_OUTPUT
           echo "domain-name=$DOMAIN_NAME" >> $GITHUB_OUTPUT
 
       # This is commented out because running Route53 for trv is still causing an error.
@@ -390,7 +390,7 @@ jobs:
     #     name: Deploy Route 53 DNS records to ELB
     #     uses: aws-actions/aws-cloudformation-github-deploy@v1
     #     with:
-    #       parameter-overrides: "Environment=${{ matrix.environment-type }},Route53HostedZoneId=Z04064941GM4P69E0QRG4,DNSName=${{ steps.deploy-env-loadbalancer.outputs.DNSName }},ELBHostedZoneId=${{ steps.deploy-env-loadbalancer.outputs.CanonicalHostedZoneID }},DomainName=${{ steps.setup-domain.outputs.domain-name }}"
+    #       parameter-overrides: "Environment=${{ matrix.environment-type }},Route53HostedZoneId=${{ steps.setup-domain.outputs.hosted-zone-id }},DNSName=${{ steps.deploy-env-loadbalancer.outputs.DNSName }},ELBHostedZoneId=${{ steps.deploy-env-loadbalancer.outputs.CanonicalHostedZoneID }},DomainName=${{ steps.setup-domain.outputs.domain-name }}"
     #       name: "biomage-alb-route53-${{ matrix.environment-type }}"
     #       template: 'infra/cf-route53.yaml'
     #       no-fail-on-empty-changeset: "1"
