--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -386,14 +386,14 @@ jobs:
 
       # This is commented out because running Route53 for trv is still causing an error.
       # A ticket to address this issue has been made: BIOMAGE-2314. Refer to the ticket for more information.
-      - id: deploy-route53
-        name: Deploy Route 53 DNS records to ELB
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }},Route53HostedZoneId=${{ steps.setup-domain.outputs.hosted-zone-id }},DNSName=${{ steps.deploy-env-loadbalancer.outputs.DNSName }},ELBHostedZoneId=${{ steps.deploy-env-loadbalancer.outputs.CanonicalHostedZoneID }},DomainName=${{ steps.setup-domain.outputs.domain-name }}"
-          name: "biomage-alb-route53-${{ matrix.environment-type }}"
-          template: 'infra/cf-route53.yaml'
-          no-fail-on-empty-changeset: "1"
+    #   - id: deploy-route53
+    #     name: Deploy Route 53 DNS records to ELB
+    #     uses: aws-actions/aws-cloudformation-github-deploy@v1
+    #     with:
+    #       parameter-overrides: "Environment=${{ matrix.environment-type }},Route53HostedZoneId=${{ steps.setup-domain.outputs.hosted-zone-id }},DNSName=${{ steps.deploy-env-loadbalancer.outputs.DNSName }},ELBHostedZoneId=${{ steps.deploy-env-loadbalancer.outputs.CanonicalHostedZoneID }},DomainName=${{ steps.setup-domain.outputs.domain-name }}"
+    #       name: "biomage-alb-route53-${{ matrix.environment-type }}"
+    #       template: 'infra/cf-route53.yaml'
+    #       no-fail-on-empty-changeset: "1"
 
     #   - id: deploy-xray-daemon
     #     name: Deploy AWS X-Ray daemon
