--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -386,14 +386,14 @@ jobs:
 
       # This is commented out because running Route53 for trv is still causing an error.
       # A ticket to address this issue has been made: BIOMAGE-2314. Refer to the ticket for more information.
-    #   - id: deploy-route53
-    #     name: Deploy Route 53 DNS records to ELB
-    #     uses: aws-actions/aws-cloudformation-github-deploy@v1
-    #     with:
-    #       parameter-overrides: "Environment=${{ matrix.environment-type }},Route53HostedZoneId=${{ steps.setup-domain.outputs.hosted-zone-id }},DNSName=${{ steps.deploy-env-loadbalancer.outputs.DNSName }},ELBHostedZoneId=${{ steps.deploy-env-loadbalancer.outputs.CanonicalHostedZoneID }},DomainName=${{ steps.setup-domain.outputs.domain-name }}"
-    #       name: "biomage-alb-route53-${{ matrix.environment-type }}"
-    #       template: 'infra/cf-route53.yaml'
-    #       no-fail-on-empty-changeset: "1"
+      - id: deploy-route53
+        name: Deploy Route 53 DNS records to ELB
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          parameter-overrides: "Environment=${{ matrix.environment-type }},Route53HostedZoneId=${{ steps.setup-domain.outputs.hosted-zone-id }},DNSName=${{ steps.deploy-env-loadbalancer.outputs.DNSName }},ELBHostedZoneId=${{ steps.deploy-env-loadbalancer.outputs.CanonicalHostedZoneID }},DomainName=${{ steps.setup-domain.outputs.domain-name }}"
+          name: "biomage-alb-route53-${{ matrix.environment-type }}"
+          template: 'infra/cf-route53.yaml'
+          no-fail-on-empty-changeset: "1"
 
     #   - id: deploy-xray-daemon
     #     name: Deploy AWS X-Ray daemon
@@ -444,8 +444,8 @@ jobs:
     #           --all
     #       done < "/tmp/users_to_remove"
 
-    #   # see https://eksctl.io/usage/iam-identity-mappings/
-    #   # Grant login rights to ci-iac-role
+      # see https://eksctl.io/usage/iam-identity-mappings/
+      # Grant login rights to ci-iac-role
     #   - id: add-ci-iac-oidc-cluster-role
     #     name: Allow the OIDC role to log in to our cluster.
     #     run: |-
@@ -532,11 +532,11 @@ jobs:
     #     run: |-
     #       kubectl create namespace flux-system
 
-    #   - id: create-account-information-configmap
-    #     name: Create a configmap containing AWS account specific details
-    #     continue-on-error: false
-    #     run: |-
-    #       kubectl create configmap account-config --from-file=infra/config/account-config.yaml -n flux-system -o yaml --dry-run | kubectl apply -f -
+      - id: create-account-information-configmap
+        name: Create a configmap containing AWS account specific details
+        continue-on-error: false
+        run: |-
+          kubectl create configmap account-config --from-file=infra/config/account-config.yaml -n flux-system -o yaml --dry-run | kubectl apply -f -
 
     #   - id: install-flux-v2
     #     name: Install flux CLI version 0.41.0
