--- a/.github/workflows/migrate-database.yaml
+++ b/.github/workflows/migrate-database.yaml
@@ -131,28 +131,24 @@ jobs:
         name: Setup tunnel to connect to RDS
         run: ./workflow-utils/rds-tunnel.sh ${{ matrix.environment-type }} default ${{ secrets.AWS_REGION }} ${{ secrets.RDS_TUNNEL_PORT }} READER
 
-    #   - id: install
-    #     name: Install dependencies
-    #     working-directory: ./migrations/sql-migrations
-    #     run: |-
-    #       echo "Running CI with "
-    #       echo "Node version: $(node --version)"
-    #       echo "NPM version: $(npm --version)"
+      - id: install
+        name: Install dependencies
+        working-directory: ./migrations/sql-migrations
+        run: |-
+          echo "Running CI with "
+          echo "Node version: $(node --version)"
+          echo "NPM version: $(npm --version)"
 
-    #       git config --global url."https://".insteadOf ssh://
-    #       npm ci
+          git config --global url."https://".insteadOf ssh://
+          npm ci
 
       - id: run-migration
         name: Run database migration
         working-directory: ./migrations/sql-migrations
         run: |
-            echo "Running CI with "
-            echo "Node version: $(node --version)"
-            echo "NPM version: $(npm --version)"
-
             git config --global url."https://".insteadOf ssh://
             npm ci
-            NODE_ENV=${{ matrix.environment-type }} SANDBOX_ID=default AWS_REGION=${{ secrets.AWS_REGION }} ./node_modules/.bin/knex migrate:latest
+            NODE_ENV=${{ matrix.environment-type }} SANDBOX_ID=default AWS_REGION=${{ secrets.AWS_REGION }} knex migrate:latest
 
   report-if-failed:
     name: Report if workflow failed
