--- a/.github/workflows/migrate-database.yaml
+++ b/.github/workflows/migrate-database.yaml
@@ -154,6 +154,7 @@ jobs:
             git config --global url."https://".insteadOf ssh://
             npm ci
             npm install -g knex
+            npm install object-hash
             NODE_ENV=${{ matrix.environment-type }} SANDBOX_ID=default AWS_REGION=${{ secrets.AWS_REGION }} knex migrate:latest
 
   report-if-failed:
