--- a/.github/workflows/migrate-database.yaml
+++ b/.github/workflows/migrate-database.yaml
@@ -131,31 +131,23 @@ jobs:
         name: Setup tunnel to connect to RDS
         run: ./workflow-utils/rds-tunnel.sh ${{ matrix.environment-type }} default ${{ secrets.AWS_REGION }} ${{ secrets.RDS_TUNNEL_PORT }} READER
 
-    #   - id: install
-    #     name: Install dependencies
-    #     working-directory: ./migrations/sql-migrations
-    #     run: |-
-    #       echo "Running CI with "
-    #       echo "Node version: $(node --version)"
-    #       echo "NPM version: $(npm --version)"
+      - id: install
+        name: Install dependencies
+        working-directory: ./migrations/sql-migrations
+        run: |-
+          echo "Running CI with "
+          echo "Node version: $(node --version)"
+          echo "NPM version: $(npm --version)"
 
-    #       git config --global url."https://".insteadOf ssh://
-    #       npm ci
-    #       npm install -g knex
+          git config --global url."https://".insteadOf ssh://
+          npm ci
+          npm install -g knex
 
       - id: run-migration
         name: Run database migration
         working-directory: ./migrations/sql-migrations
         run: |
-            echo "Running CI with "
-            echo "Node version: $(node --version)"
-            echo "NPM version: $(npm --version)"
-
-            git config --global url."https://".insteadOf ssh://
-            npm ci
-            npm install -g knex
-            npm link object-hash
-            NODE_ENV=${{ matrix.environment-type }} SANDBOX_ID=default AWS_REGION=${{ secrets.AWS_REGION }} knex migrate:latest
+            NODE_ENV=${{ matrix.environment-type }} SANDBOX_ID=default AWS_ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }} AWS_REGION=${{ secrets.AWS_REGION }} ./node_modules/.bin/knex migrate:latest
 
   report-if-failed:
     name: Report if workflow failed
