--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -48,6 +48,15 @@ Resources:
               - Effect: Allow
                 Action: "sqs:CreateQueue"
                 Resource: !Sub "arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:queue-job-*-${Environment}.fifo"
+        - PolicyName: !Sub "create-admin-user-${Environment}"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "cognito-idp:AdminCreateUser"
+                  - "cognito-idp:AdminGetUser"
+                Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
 
         - PolicyName: !Sub "can-send-to-worker-queue-${Environment}"
           PolicyDocument:
