--- a/infra/cf-loadbalancer.yaml
+++ b/infra/cf-loadbalancer.yaml
@@ -18,11 +18,23 @@ Parameters:
 Conditions:
   isPublic: !Equals [!Ref PublicFacing, "true"]
 
+
+Mappings:
+  # The values below are the account IDs of the ALB logger service and are determined by AWS
+  # Refer to https://docs.aws.amazon.com/elasticloadbalancing/latest/application/enable-access-logging.html
+  ALBServiceMap:
+    us-east-2:
+      AccountId: "033677994240"
+    eu-west-1:
+      AccountId: "156460612806"
+    us-west-2:
+      AccountId: "380194660975"
+
 Resources:
   LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-    # DependsOn:
-    #   - ALBLogsBucketPermission
+    DependsOn:
+      - ALBLogsBucketPermission
     Properties:
       Name: !Sub "k8s-${Environment}"
       IpAddressType: ipv4
@@ -33,12 +45,12 @@ Resources:
           Value: "true"
         - Key: routing.http.drop_invalid_header_fields.enabled
           Value: "true"
-        # - Key: access_logs.s3.enabled
-        #   Value: "true"
-        # - Key: access_logs.s3.bucket
-        #   Value: !Ref ALBLogsBucket
-        # - Key: access_logs.s3.prefix
-        #   Value: !Sub "k8s-${Environment}"
+        - Key: access_logs.s3.enabled
+          Value: "true"
+        - Key: access_logs.s3.bucket
+          Value: !Ref ALBLogsBucket
+        - Key: access_logs.s3.prefix
+          Value: !Sub "k8s-${Environment}"
       Scheme: !If [isPublic, "internet-facing", "internal"]
       Subnets:
         Fn::Split:
@@ -78,19 +90,19 @@ Resources:
             Status: "Enabled"
             NoncurrentVersionExpirationInDays: 7
 
-  # ALBLogsBucketPermission:
-  #   Type: AWS::S3::BucketPolicy
-  #   Properties:
-  #     Bucket: !Ref ALBLogsBucket
-  #     PolicyDocument:
-  #       Version: "2012-10-17"
-  #       Statement:
-  #         - Action:
-  #             - 's3:PutObject'
-  #           Effect: Allow
-  #           Principal:
-  #             AWS: !Ref "AWS::AccountId"
-  #           Resource: !Join [ "", [!GetAtt ALBLogsBucket.Arn, !Sub "/k8s-${Environment}/*"]]
+  ALBLogsBucketPermission:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref ALBLogsBucket
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Action:
+              - 's3:PutObject'
+            Effect: Allow
+            Principal:
+              AWS: !Join [ "", ["arn:aws:iam::", !FindInMap [ALBServiceMap, !Ref "AWS::Region", AccountId], ":root" ]]
+            Resource: !Join [ "", [!GetAtt ALBLogsBucket.Arn, !Sub "/k8s-${Environment}/*"]]
 
 Outputs:
   CanonicalHostedZoneID:
