--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -33,8 +33,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        # environment-name: [Biomage, trv]
-        environment-name: [trv]
+        environment-name: [Biomage, trv]
     environment: ${{ matrix.environment-name }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -160,8 +159,7 @@ jobs:
       max-parallel: 1
       matrix:
         environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
-        # environment-name: [Biomage, trv]
-        environment-name: [trv]
+        environment-name: [Biomage, trv]
         exclude:
           - environment-name: trv
             environment-type: staging
@@ -265,8 +263,7 @@ jobs:
       max-parallel: 1
       matrix:
         environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
-        # environment-name: [Biomage, trv]
-        environment-name: [trv]
+        environment-name: [Biomage, trv]
         exclude:
           - environment-name: trv
             environment-type: staging
