--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -10,6 +10,14 @@ on:
         - production
         - staging and production
         default: staging
+      environment_type:
+        type: choice
+        description: Select environment type
+        options:
+            - staging
+            - production
+            - staging and production
+        default: staging
   push:
     branches:
       - master
