--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -72,6 +72,7 @@ jobs:
     name: Check secrets
     needs: set-environments
     runs-on: ubuntu-20.04
+    if: github.ref == 'refs/heads/master' || github.event_name == 'workflow_dispatch'
     strategy:
       matrix:
         environment-name: ${{ fromJson(needs.set-environments.outputs.env-name) }}
