Revert "test check secrets"
This reverts commit 09772fa6afc6b5cc983c5785843c794349e7efb3.

--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -107,6 +107,7 @@ jobs:
     name: Check secrets
     needs: set-environments
     runs-on: ubuntu-20.04
+    if: github.ref == 'refs/heads/master' || github.event_name == 'workflow_dispatch'
     strategy:
       matrix:
         environment-type: ${{ fromJson(needs.set-environments.outputs.env-type) }}
