--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -172,3 +172,13 @@ Resources:
     Properties:
       UserPoolId: !Ref UserPool
       Domain: !Sub "biomage-auth-${Environment}-${AWS::AccountId}"
+
+  # Add permission to allow userpool to trigger lambda
+  PostRegisterLambdaInvocationPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName:
+        Fn::ImportValue: !Sub PostRegisterLambdaArn-${Environment}
+      Principal: "cognito-idp.amazonaws.com"
+      SourceArn: !GetAtt UserPool.Arn
