--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -69,8 +69,8 @@ jobs:
           BASE_NAME=biomage-sns-staging-$SANDBOX_ID
           echo "sns-name=$BASE_NAME" >> $GITHUB_OUTPUT
 
-          BASE_NAME=biomage-cognito-staging-$SANDBOX_ID
-          echo "cognito-name=$BASE_NAME" >> $GITHUB_OUTPUT
+          BASE_NAME=biomage-userpoolclient-staging-$SANDBOX_ID
+          echo "userpoolclient-name=$BASE_NAME" >> $GITHUB_OUTPUT
 
           BASE_NAME=biomage-batch-job-definition-staging-$SANDBOX_ID
           echo "batch-job-definition-name=$BASE_NAME" >> $GITHUB_OUTPUT
@@ -198,12 +198,12 @@ jobs:
           no-fail-on-empty-changeset: "1"
           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
 
-      - id: deploy-template-cognito
-        name: Deploy CloudFormation stack for Cognito pool clients
+      - id: deploy-template-userpool-client
+        name: Deploy CloudFormation stack for Cognito userpool clients
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           parameter-overrides: "Environment=staging,SandboxID=${{ github.event.inputs.sandbox-id }}"
-          name: ${{ steps.set-stack-name.outputs.cognito-name }}
+          name: ${{ steps.set-stack-name.outputs.userpoolclient-name }}
           template: cf/userpoolclient.yaml
           no-fail-on-empty-changeset: "1"
           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
