Get VPC details from AWS

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -165,15 +165,36 @@ jobs:
       - id: fill-metadata
         name: Add name and region to the eksctl file.
         run: |-
-          export CLUSTER_NAME="biomage-$CLUSTER_ENV"
+          # Check that there is only 1 VPC at the moment
+          NUM_VPCS=$(aws ec2 describe-vpcs | jq -r '.Vpcs | length')
+
+          if [ $NUM_VPCS != "1" ]; then
+              echo "There are $NUM_VPCS in the account. Ensure there is only 1 VPC."
+              exit 1
+          fi
+
+          CLUSTER_NAME="biomage-$CLUSTER_ENV"
 
           yq -i '
             .metadata.name = strenv(CLUSTER_NAME) |
             .metadata.region = strenv(AWS_REGION)
           ' infra/config/cluster/cluster-template.yaml
 
-          export CUSTOM_CLUSTER_CONFIG="infra/config/cluster/${{ matrix.environment-name }}/custom-cluster-config.yaml"
-          yq eval-all '. as $item ireduce ({}; . *d $item)' infra/config/cluster/cluster-template.yaml ${CUSTOM_CLUSTER_CONFIG} > /tmp/cluster-$CLUSTER_ENV.yaml
+          CELLENICS_VPC_ID=$(aws ec2 describe-vpcs | jq -r '.Vpcs[0].VpcId')
+          PUBLIC_SUBNET_1_ID=$(aws ec2 describe-subnets --filters "Name=vpc-id,Values=CELLENICS_VPC_ID" --filters "Name=map-public-ip-on-launch,Values=true" | jq -r '.Subnets[0].SubnetId')
+          PUBLIC_SUBNET_2_ID=$(aws ec2 describe-subnets --filters "Name=vpc-id,Values=CELLENICS_VPC_ID" --filters "Name=map-public-ip-on-launch,Values=true" | jq -r '.Subnets[1].SubnetId')
+          PRVATE_SUBNET_1_ID=$(aws ec2 describe-subnets --filters "Name=vpc-id,Values=CELLENICS_VPC_ID" --filters "Name=map-public-ip-on-launch,Values=false" | jq -r '.Subnets[0].SubnetId')
+          PRVATE_SUBNET_2_ID=$(aws ec2 describe-subnets --filters "Name=vpc-id,Values=CELLENICS_VPC_ID" --filters "Name=map-public-ip-on-launch,Values=false" | jq -r '.Subnets[1].SubnetId')
+
+          cat infra/config/cluster/cluster-config-template.yaml \
+          | sed "s/CELLENICS_VPC_ID/$CELLENICS_VPC_ID/g" \
+          | sed "s/PRVATE_SUBNET_1_ID/$PRVATE_SUBNET_1_ID/g" \
+          | sed "s/PRVATE_SUBNET_2_ID/$PRVATE_SUBNET_2_ID/g" \
+          | sed "s/PUBLIC_SUBNET_1_ID/$PUBLIC_SUBNET_1_ID/g" \
+          | sed "s/PUBLIC_SUBNET_2_ID/$PUBLIC_SUBNET_2_ID/g" \
+          > /tmp/cluster-config-values.yaml
+
+          yq eval-all '. as $item ireduce ({}; . *d $item)' infra/config/cluster/cluster-template.yaml /tmp/cluster-config-values.yaml > /tmp/cluster-$CLUSTER_ENV.yaml
           cat /tmp/cluster-$CLUSTER_ENV.yaml
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
