--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -164,6 +164,7 @@ jobs:
     name: Create EKS cluster
     runs-on: ubuntu-20.04
     needs: [set-environments, check-secrets]
+    if: github.event.inputs.workflow_actions == 'create and configure cluster'
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
     strategy:
@@ -177,7 +178,6 @@ jobs:
           - environment-name: alabs
             environment-type: staging
     environment: ${{ matrix.environment-name }}
-    if: github.event.inputs.workflow_actions == 'create and configure cluster'
     steps:
       - id: checkout
         name: Check out source code
@@ -291,7 +291,7 @@ jobs:
     name: Configure Kubernetes resources on the EKS cluster
     runs-on: ubuntu-20.04
     needs: [set-environments, check-secrets, create-eks-cluster]
-    if: always() && github.event.inputs.workflow_actions != 'deploy monitoring' && (needs.create-eks-cluster.result == 'success' || needs.create-eks-cluster.result == 'skipped')
+    if: github.event.inputs.workflow_actions == 'configure cluster' || github.event.inputs.workflow_actions == 'create and configure cluster'
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
       API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
@@ -715,7 +715,7 @@ jobs:
     name: Setup logging and monitoring
     runs-on: ubuntu-20.04
     needs: [set-environments, check-secrets, create-eks-cluster, configure-cluster]
-    if: always() && github.event.inputs.workflow_actions != 'configure cluster' && (needs.create-eks-cluster.result == 'success' || needs.create-eks-cluster.result == 'skipped' && (needs.configure-cluster.result == 'success' || needs.configure-cluster.result == 'skipped'))
+    if: github.event.inputs.workflow_actions == 'deploy-monitoring'
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
       API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
